--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h2>Dream Big</h2>
             <h3>Become a World-class web developer</h3>
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-            <a class="link-button" href="https://www.facebook.com/asif.asifiqbal.71868/" target="_blank">VISIT MY Facebook !</a>
+            <a class="link-button" href="https://www.facebook.com/asif.asifiqbal.71868/" target="_blank">VISIT Fb !</a>
         </div>
     </section>
     <section class="experience-area">
