--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a class="link-button" href="https://www.linkedin.com/in/asif-iqbal-1691b91bb/" target="_blank">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="images/img1.png" alt="">
+            <img src="images/newImg1.png" alt="">
         </div>
     </section>
     <section class="dream-area">
