change second image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </section>
     <section class="dream-area">
         <div class="half-width">
-            <img src="images/img2.png" alt="">
+            <img src="images/newImg2.png" alt="">
         </div>
         <div class="half-width">
             <h2>Dream Big</h2>
