--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asif Web Developer</title>
+    <title>Programmer</title>
+    <link rel="shortcut icon" href="images/icon.ico" type="image/x-icon">
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> <<<< old-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
